# advent-of-pain

./: CHANGELOG.md  LICENSE  README.md  advent-of-pain.cabal
app/: Main.hs
inputs/: input01.txt
src/: AoP.hs
src/AoP/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
