cabal-version:      2.4
name:               advent-of-pain
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Sebastián Aedo
maintainer:         sebastian.aedo29@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-settings
    default-language: Haskell2010
    ghc-options:
        -Wall

library 
    import: common-settings
    hs-source-dirs:   src
    exposed-modules:
        AoP
           AoP.Day01 
           AoP.Day02 
    build-depends:
            base

executable solver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
            base ^>=4.15.1.0
        ,   advent-of-pain
        ,   optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O

